fix(core): Fix loss of letters in labels in wrapTicks() (#202)
197

--- a/packages/core/src/style.scss
+++ b/packages/core/src/style.scss
@@ -87,10 +87,6 @@ div.chart-holder {
 		}
 	}
 
-	tspan {
-		cursor: pointer;
-	}
-
 	.legend-wrapper {
 		height: 40px;
 		width: 100%;
